--- a/web/src/scaffold.css
+++ b/web/src/scaffold.css
@@ -46,7 +46,8 @@
 
 .rw-scaffold,
 .rw-toast {
-  background-color: #fff;
+  border-radius: 8px;
+  background-color: var(--gray-800);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -304,12 +305,10 @@
   padding: 0.75rem;
 }
 .rw-table td {
-  background-color: #ffffff;
   color: #1a202c;
 }
-.rw-table tr:nth-child(odd) td,
-.rw-table tr:nth-child(odd) th {
-  background-color: #f7fafc;
+.rw-table th, td {
+  background-color: #fff;
 }
 .rw-table thead tr {
   color: #4a5568;
